@@ -1,3 +1,13 @@
+2003-03-27  Hiroyuki Ito <hito@crl.go.jp>
+
+	* [w3m-dev 03830] Image size of gif animation
+	* w3mimg/fb/fb_gdkpixbuf.c (get_animation_size): added
+		(get_image_size): use get_animation_size()
+		(fb_image_load): ditto
+	* w3mimg/x11/x11_w3mimg.c (get_animation_size): added
+		(x11_load_image): use get_animation_size()
+		(x11_get_image_size): ditto
+
 2003-03-25  Hiroyuki Ito <hito@crl.go.jp>
 
 	* [w3m-dev 03829] w3mimgdisplay -anim
